src/tests/evaluator_error/type_mismatch_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluator_error__type_mismatch_integer_infix_expression__test_type_mismatch_integer_infix_expression_case_3_syntax_analysis.snap
---
source: src/tests/evaluator_error/type_mismatch_integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: Boolean {
                boolean: True,
            },
            operator: Multiply,
            right_hand: Integer {
                literal: 9,
            },
        },
    },
]
